@@ -71,13 +71,13 @@ struct
    "FATAL Compiler Internal Error in file '%s' line number '%d' : %s \n"
    "Contact Author with source code" },
 { E_LVALUE_REQUIRED, ERROR_LEVEL_ERROR,
-   "'lvalue' required for '%s' operation ." },
+   "'lvalue' required for '%s' operation." },
 { E_TMPFILE_FAILED, ERROR_LEVEL_ERROR,
    "Creation of temp file failed" },
 { E_FUNCTION_EXPECTED, ERROR_LEVEL_ERROR,
    "called object is not a function" },
 { E_USING_ERROR, ERROR_LEVEL_ERROR,
-   "'using', 'interrupt' or 'reentrant' must follow a function definiton .'%s'" },
+   "'using', 'interrupt' or 'reentrant' must follow a function definiton.'%s'" },
 { E_SFR_INIT, ERROR_LEVEL_ERROR,
    "Absolute address & initial value both cannot be specified for\n"
    " a 'sfr','sbit' storage class, initial value ignored '%s'" },
@@ -114,7 +114,7 @@ struct
 { E_INT_REQD, ERROR_LEVEL_ERROR,
    "type must be INT for bit field definition" },
 { E_BITFLD_SIZE, ERROR_LEVEL_ERROR,
-   "bit field size greater than 16 . assuming 16" },
+   "bit field size greater than 16. assuming 16" },
 { W_TRUNCATION, ERROR_LEVEL_WARNING,
    "high order truncation might occur" },
 { E_CODE_WRITE, ERROR_LEVEL_ERROR,
@@ -226,7 +226,7 @@ struct
 { E_OP_UNKNOWN_SIZE, ERROR_LEVEL_ERROR,
    "unknown size for operand" },
 { W_LONG_UNSUPPORTED, ERROR_LEVEL_WARNING,
-   "'%s' 'long' not supported , declared as 'int' ." },
+   "'%s' 'long' not supported , declared as 'int'." },
 { E_LITERAL_GENERIC, ERROR_LEVEL_ERROR,
     //"illegal cast of LITERAL value to 'generic' pointer: assuming 'xdata' pointer" },
     "illegal cast of LITERAL value to 'generic' pointer" },
@@ -293,7 +293,7 @@ struct
 { W_UNKNOWN_FEXT, ERROR_LEVEL_WARNING,
    "don't know what to do with file '%s'. file extension unsupported" },
 { W_TOO_MANY_SRC, ERROR_LEVEL_WARNING,
-   "cannot compile more than one source file . file '%s' ignored" },
+   "cannot compile more than one source file. file '%s' ignored" },
 { I_CYCLOMATIC, ERROR_LEVEL_INFO,
    "function '%s', # edges %d , # nodes %d , cyclomatic complexity %d" },
 { E_DIVIDE_BY_ZERO, ERROR_LEVEL_ERROR,
@@ -374,6 +374,12 @@ struct
     "if-statement condition always true, if-statement not generated" },
 { E_PARAM_NAME_OMITTED, ERROR_LEVEL_ERROR,
     "in function %s: name omitted for parameter %d" },
+{ W_NO_FILE_ARG_IN_C1, ERROR_LEVEL_WARNING,
+    "only standard input is compiled in c1 mode. file '%s' ignored" },
+{ E_NEED_OPT_O_IN_C1, ERROR_LEVEL_ERROR,
+    "must specify assembler file name with -o in c1 mode" },
+{ W_ILLEGAL_OPT_COMBINATION, ERROR_LEVEL_WARNING,
+    "illegal combination of options (--c1mode, -E, -S -c)" },
 };
 
 /*
